rm nvbio, runs on summit

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -27,7 +27,7 @@ FOREACH(MAX_NUM_READS ${MAX_NUM_READS_LIST})
   		PROPERTIES				LANGUAGE CXX LINKER_LANGUAGE CXX
   		INCLUDE_DIRECTORIES		${ARGP_INCLUDE_DIRS} ${SEQAN_INCLUDE_PATH} # do I really need seqan here again?
   		OBJECT_LIBRARIES		common fqreader MPIType	LIBBLOOM MURMURHASH loadfq_objs KmerObjects-${HIPMER_KMER_LEN} kmermatch_objs-${MAX_NUM_READS}-${HIPMER_KMER_LEN} readufx-${MAX_NUM_READS}-${HIPMER_KMER_LEN} ReadOverlap-${MAX_NUM_READS}-${HIPMER_KMER_LEN} align_objs-${MAX_NUM_READS}-${HIPMER_KMER_LEN}
-  		LINK_LIBRARIES			cuda_objs  ${ARGP_LIBRARIES} ${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} 
+  		LINK_LIBRARIES			gpu_kmer  ${ARGP_LIBRARIES} ${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} 
   		CXXFLAGS				${MPI_CXX_COMPILE_FLAGS} ${MPI_CXX_LINK_FLAGS} 
   		INSTALL_DESTINATION		${CMAKE_INSTALL_PREFIX}/bin
   	)
