GPU direct comm

--- a/kmercount/CMakeLists.txt
+++ b/kmercount/CMakeLists.txt
@@ -105,10 +105,12 @@ object			SOURCES				readufx.cpp
 			TYPE				OBJECT
 			TARGET_NAME			${NAME}
 			OUTPUT_NAME			${NAME}
-			SOURCES				kmermatch.cpp
+			SOURCES				kmermatch.cu
 			DEFINITIONS			${KMER_DEFS}
 			LINK_LIBRARIES		${ZLIB_LIBRARIES}
-			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS})
+			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS}
+			CUDAFLAGS	        -ccbin=${CMAKE_CXX_COMPILER} -Xcompiler -fopenmp -arch=sm_35 -maxrregcount=32 #TODO some of these flags shouldn't be hard coded here
+ 			PROPERTIES          COMPILE_LANGUAGE CUDA ${CUDA_PROPERTIES} ) 
 		add_readid_defs(${NAME})
 		
 # b2tufx
@@ -183,11 +185,13 @@ object			SOURCES				readufx.cpp
 			TYPE 				OBJECT
 			TARGET_NAME			${NAME}
 			OUTPUT_NAME			${NAME}
-			SOURCES				kmermatch.cpp
+			SOURCES				kmermatch.cu
 			DEFINITIONS			${KMER_DEFS} SINGLE_EXEC=1
 			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS} ${CMAKE_LINK_FLAGS} ${MPI_CXX_LINK_FLAGS}
 #			OBJECT_LIBRARIES	common fqreader ReadOverlap-${MAX_NUM_READS}-${HIPMER_KMER_LEN} LIBBLOOM-NOUPC MPIType KmerObjects-${HIPMER_KMER_LEN} kmermatch-${MAX_NUM_READS}-${HIPMER_KMER_LEN}-NOUPC
-			LINK_LIBRARIES		${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} gpu_kmer)
+			LINK_LIBRARIES		${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} gpu_kmer
+			CUDAFLAGS	        -ccbin=${CMAKE_CXX_COMPILER} -Xcompiler -fopenmp -arch=sm_35 -maxrregcount=32 #TODO some of these flags shouldn't be hard coded here
+ 			PROPERTIES          COMPILE_LANGUAGE CUDA ${CUDA_PROPERTIES} ) 
 		add_readid_defs(${NAME})
 	
 	ENDFOREACH() # HIPMER_KMER_LENGTHS
