--- a/kmercount/CMakeLists.txt
+++ b/kmercount/CMakeLists.txt
@@ -8,7 +8,7 @@ if (OPENMP_FOUND)
 endif()
 message("Set OpenMP_EXTRA_LINKER_FLAGS=${OpenMP_EXTRA_LINKER_FLAGS}")
 
-
+set(CUDA_SEPARABLE_COMPILATION ON)
 # find_package(OpenMP)
 # if (OPENMP_FOUND)
 #     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -64,9 +64,12 @@ ENDFOREACH()
 
 add_library(gpu_kmer STATIC
 # 	supermer.cu 
-	linearprobing.cu
+# 	linearprobing.cu
 #  	supermer.h 
- 	linearprobing.h 
+# 	common.h
+# 	common_gpu.h
+#  	linearprobing.h 
+  	simple.cpp
   )
 
 # Request that particles be built with -std=c++11
@@ -105,45 +108,15 @@ object			SOURCES				readufx.cpp
 			TYPE				OBJECT
 			TARGET_NAME			${NAME}
 			OUTPUT_NAME			${NAME}
-			SOURCES				kmermatch.cu supermer.cpp supermer.cu
-			HEADERS				supermer.h common_gpu.h
+			SOURCES				kmermatch.cu supermer.cpp supermer.cu kmercounter_GPU.cu linearprobing.cu 
+			HEADERS				common.h supermer.h common_gpu.h linearprobing.h
 			DEFINITIONS			${KMER_DEFS}
 			LINK_LIBRARIES		${ZLIB_LIBRARIES}
 			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS}
 			CUDAFLAGS	        -ccbin=${CMAKE_CXX_COMPILER} -Xcompiler -fopenmp -arch=sm_70 -maxrregcount=32 #TODO some of these flags shouldn't be hard coded here
  			PROPERTIES          COMPILE_LANGUAGE CUDA ${CUDA_PROPERTIES} ) 
 		add_readid_defs(${NAME})
-		
-# b2tufx
-		set(NAME b2tufx-${MAX_NUM_READS}-${HIPMER_KMER_LEN})
-		create_executable(
-			INSTALL
-			TARGET_NAME				${NAME}
-			OUTPUT_NAME				${NAME}
-			SOURCES					bin2textUFX.cpp
-			DEFINITIONS				${KMER_DEFS}
-			CXXFLAGS				${MPI_CXX_COMPILE_FLAGS}
-			OBJECT_LIBRARIES		common fqreader KmerObjects-${HIPMER_KMER_LEN}
-			LINK_LIBRARIES			${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} 
-			INSTALL_DESTINATION 	${CMAKE_INSTALL_PREFIX}/bin
-		)
-		add_readid_defs(${NAME})
-	
-# b2tcnt
- 		set(NAME b2tcnt-${MAX_NUM_READS}-${HIPMER_KMER_LEN})
-		create_executable(
-			INSTALL
-			TARGET_NAME			${NAME}
-			OUTPUT_NAME			${NAME}
-			SOURCES				bin2textCount.cpp
-			DEFINITIONS			${KMER_DEFS}
-			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS}
-			OBJECT_LIBRARIES	common KmerObjects-${HIPMER_KMER_LEN}
-			LINK_LIBRARIES		${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} 
-			INSTALL_DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
-		)
-		add_readid_defs(${NAME})
-		
+			
 		
 # kmermatch
 		set(NAME kmermatch-${MAX_NUM_READS}-${HIPMER_KMER_LEN})
@@ -165,13 +138,13 @@ object			SOURCES				readufx.cpp
 			TYPE 				OBJECT
 			TARGET_NAME			${NAME}
 			OUTPUT_NAME			${NAME}
-			SOURCES				kmermatch.cu supermer.cpp supermer.cu
-			HEADERS				supermer.h
+			SOURCES				kmermatch.cu supermer.cpp supermer.cu kmercounter_GPU.cu 
+			HEADERS				common.h supermer.h common_gpu.h
 			DEFINITIONS			${KMER_DEFS} SINGLE_EXEC=1
 			CXXFLAGS			${MPI_CXX_COMPILE_FLAGS} ${CMAKE_LINK_FLAGS} ${MPI_CXX_LINK_FLAGS}
 #			OBJECT_LIBRARIES	common fqreader ReadOverlap-${MAX_NUM_READS}-${HIPMER_KMER_LEN} LIBBLOOM-NOUPC MPIType KmerObjects-${HIPMER_KMER_LEN} kmermatch-${MAX_NUM_READS}-${HIPMER_KMER_LEN}-NOUPC
 			LINK_LIBRARIES		${MPI_CXX_LIBRARIES} ${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} gpu_kmer
-			CUDAFLAGS	        -ccbin=${CMAKE_CXX_COMPILER} -Xcompiler -fopenmp -arch=sm_35 -maxrregcount=32 #TODO some of these flags shouldn't be hard coded here
+			CUDAFLAGS	        -ccbin=${CMAKE_CXX_COMPILER} -Xcompiler -fopenmp -arch=sm_70 -maxrregcount=32 #TODO some of these flags shouldn't be hard coded here
  			PROPERTIES          COMPILE_LANGUAGE CUDA ${CUDA_PROPERTIES} ) 
 		add_readid_defs(${NAME})
 	
@@ -189,5 +162,5 @@ create_executable(
 	PROPERTIES			LANGUAGE C LINKER_LANGUAGE C LINK_FLAGS ${OpenMP_EXTRA_LINKER_FLAGS}
 	CFLAGS				${MPI_C_COMPILE_FLAGS} ${OpenMP_C_FLAGS} 
 	INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}
-	LINK_LIBRARIES		${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} ${MPI_C_LIBRARIES} #gpu_kmer
+	LINK_LIBRARIES		${ZLIB_LIBRARIES} ${RT_LIBRARIES} ${libc} ${MPI_C_LIBRARIES} gpu_kmer
 	INSTALL_DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
